welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (speed < 60 && !isBirthday) {
		return 0;
	}
	else if ( speed <= 80 && 61 <= speed && !isBirthday ) {
		return 1;
	}
	else if ( 81 <= speed && !isBirthday ) {
		return 2;
	}
	speed = speed + 5
}